--- a/APP/IOS/PointExchange/PointExchange/DsMerchantTableViewCell.xib
+++ b/APP/IOS/PointExchange/PointExchange/DsMerchantTableViewCell.xib
@@ -6,64 +6,63 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="95" id="KGk-i7-Jjw" customClass="DsMerchantTableViewCell" customModule="PointExchange" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="328" height="95"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="117" id="KGk-i7-Jjw" customClass="DsMerchantTableViewCell" customModule="PointExchange" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="386" height="117"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="328" height="94.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="386" height="116.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="card background" translatesAutoresizingMaskIntoConstraints="NO" id="LiQ-EC-f08">
-                        <rect key="frame" x="-7" y="0.0" width="342" height="109"/>
+                        <rect key="frame" x="24" y="2" width="338" height="114.5"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T11-fC-SnT">
-                        <rect key="frame" x="125" y="15" width="187" height="28"/>
+                        <rect key="frame" x="146" y="28.5" width="48" height="24"/>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <color key="textColor" red="0.082352941176470587" green="0.082352941176470587" blue="0.082352941176470587" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VhI-rC-dIG">
-                        <rect key="frame" x="125" y="44" width="39" height="16"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <rect key="frame" x="146" y="60.5" width="45.5" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.63137254901960782" green="0.63137254901960782" blue="0.63137254901960782" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6HW-sC-PPX">
-                        <rect key="frame" x="290" y="68" width="22" height="20"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="myD-kH-mLc">
+                        <rect key="frame" x="50" y="28.5" width="63" height="62.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="myD-kH-mLc" secondAttribute="height" multiplier="1:1" id="yZK-aU-Twe"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6HW-sC-PPX">
+                        <rect key="frame" x="304.5" y="80.5" width="25.5" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.60392156862745094" green="0.52549019607843139" blue="0.086274509803921567" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="myD-kH-mLc">
-                        <rect key="frame" x="16" y="13" width="75" height="75"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="75" id="NNz-cH-fhK"/>
-                            <constraint firstAttribute="height" constant="75" id="up1-tc-kyf"/>
-                        </constraints>
-                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="VhI-rC-dIG" firstAttribute="top" secondItem="T11-fC-SnT" secondAttribute="bottom" constant="1" id="0bB-ki-6Bv"/>
-                    <constraint firstAttribute="trailing" secondItem="T11-fC-SnT" secondAttribute="trailing" constant="16" id="0si-rK-uel"/>
-                    <constraint firstItem="LiQ-EC-f08" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="2z1-DL-EHl"/>
-                    <constraint firstItem="T11-fC-SnT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="CJQ-J5-j76"/>
-                    <constraint firstItem="myD-kH-mLc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Hy5-RE-1FL"/>
-                    <constraint firstAttribute="trailing" secondItem="myD-kH-mLc" secondAttribute="trailing" constant="237" id="Yka-Cv-lOr"/>
-                    <constraint firstItem="T11-fC-SnT" firstAttribute="leading" secondItem="myD-kH-mLc" secondAttribute="trailing" constant="34" id="a1v-vr-iGJ"/>
-                    <constraint firstAttribute="bottom" secondItem="T11-fC-SnT" secondAttribute="bottom" constant="52" id="iZ8-cu-MUo"/>
-                    <constraint firstAttribute="bottom" secondItem="VhI-rC-dIG" secondAttribute="bottom" constant="35" id="kg4-1o-05v"/>
-                    <constraint firstItem="VhI-rC-dIG" firstAttribute="leading" secondItem="T11-fC-SnT" secondAttribute="leading" id="lFg-P1-RU6"/>
-                    <constraint firstItem="LiQ-EC-f08" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="oFl-gF-O2Z"/>
-                    <constraint firstItem="myD-kH-mLc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="p4a-9r-7zH"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="myD-kH-mLc" secondAttribute="bottom" constant="-4" id="qbC-Gp-hW0"/>
+                    <constraint firstItem="VhI-rC-dIG" firstAttribute="top" secondItem="T11-fC-SnT" secondAttribute="bottom" constant="8" symbolic="YES" id="3n5-hL-D6q"/>
+                    <constraint firstAttribute="bottom" secondItem="LiQ-EC-f08" secondAttribute="bottom" id="9Q7-Lg-M5d"/>
+                    <constraint firstItem="myD-kH-mLc" firstAttribute="centerY" secondItem="LiQ-EC-f08" secondAttribute="centerY" id="J7F-9k-0f2"/>
+                    <constraint firstItem="VhI-rC-dIG" firstAttribute="leading" secondItem="T11-fC-SnT" secondAttribute="leading" id="LIf-n9-RnD"/>
+                    <constraint firstItem="LiQ-EC-f08" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="Tr0-sG-ay7"/>
+                    <constraint firstItem="LiQ-EC-f08" firstAttribute="trailing" secondItem="6HW-sC-PPX" secondAttribute="trailing" constant="32" id="VWE-lh-l8w"/>
+                    <constraint firstAttribute="trailing" secondItem="LiQ-EC-f08" secondAttribute="trailing" constant="24" id="fvw-tz-eAm"/>
+                    <constraint firstItem="6HW-sC-PPX" firstAttribute="bottom" secondItem="myD-kH-mLc" secondAttribute="bottom" constant="4" id="goO-Xx-DIp"/>
+                    <constraint firstItem="LiQ-EC-f08" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="24" id="iN4-wz-KX8"/>
+                    <constraint firstItem="myD-kH-mLc" firstAttribute="height" secondItem="LiQ-EC-f08" secondAttribute="height" multiplier="0.55" id="m45-u6-JKT"/>
+                    <constraint firstItem="T11-fC-SnT" firstAttribute="leading" secondItem="myD-kH-mLc" secondAttribute="trailing" constant="33" id="n28-xj-1CZ"/>
+                    <constraint firstItem="T11-fC-SnT" firstAttribute="top" secondItem="myD-kH-mLc" secondAttribute="top" id="nSQ-hB-wV1"/>
+                    <constraint firstItem="myD-kH-mLc" firstAttribute="leading" secondItem="LiQ-EC-f08" secondAttribute="leading" constant="26" id="zwp-BP-49s"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -73,7 +72,7 @@
                 <outlet property="nameLabel" destination="T11-fC-SnT" id="EBh-jI-tUQ"/>
                 <outlet property="typeLabel" destination="6HW-sC-PPX" id="Lr6-De-5s3"/>
             </connections>
-            <point key="canvasLocation" x="56" y="145.5"/>
+            <point key="canvasLocation" x="40" y="142.5"/>
         </tableViewCell>
     </objects>
     <resources>
