--- a/APP/IOS/PointExchange/PointExchange/Base.lproj/User.storyboard
+++ b/APP/IOS/PointExchange/PointExchange/Base.lproj/User.storyboard
@@ -531,9 +531,9 @@
         <!--历史订单-线下支付-->
         <scene sceneID="OOQ-0O-eOc">
             <objects>
-                <viewController title="历史订单-线下支付" id="jEn-sc-PCm" customClass="OfflineHistoryViewController" customModule="PointExchange" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="OfflineHistoryViewController" title="历史订单-线下支付" id="jEn-sc-PCm" customClass="OfflineHistoryViewController" customModule="PointExchange" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="T3G-g3-cd9">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="611"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="M9z-Bb-Pmh">
@@ -570,41 +570,9 @@
                     <view key="view" contentMode="scaleToFill" id="rSn-Ik-aHt">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="PO8-qa-NUq">
-                                <rect key="frame" x="0.0" y="64" width="375" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <segments>
-                                    <segment title="优惠券"/>
-                                    <segment title="线下支付"/>
-                                </segments>
-                                <connections>
-                                    <action selector="segmentChange:" destination="1rP-0F-TP8" eventType="valueChanged" id="IiA-eW-Dom"/>
-                                </connections>
-                            </segmentedControl>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Do-lv-WNv">
-                                <rect key="frame" x="0.0" y="110" width="375" height="567"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <connections>
-                                    <segue destination="sab-0W-tes" kind="embed" identifier="coupon" id="yn9-5o-gIU"/>
-                                </connections>
-                            </containerView>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ye6-Fd-Z2f">
-                                <rect key="frame" x="0.0" y="110" width="375" height="611"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <connections>
-                                    <segue destination="jEn-sc-PCm" kind="embed" identifier="activity" id="baj-Mz-QQq"/>
-                                </connections>
-                            </containerView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="7HH-6O-Fxz"/>
                     </view>
-                    <connections>
-                        <outlet property="activityContainer" destination="Ye6-Fd-Z2f" id="VHn-I6-mOv"/>
-                        <outlet property="couponContainer" destination="5Do-lv-WNv" id="vIj-4W-sOX"/>
-                        <outlet property="segmentControl" destination="PO8-qa-NUq" id="BNN-zr-OMl"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WWU-lu-gGI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1015,13 +983,14 @@
         <!--历史订单-优惠券-->
         <scene sceneID="tBa-nQ-tky">
             <objects>
-                <viewController title="历史订单-优惠券" id="sab-0W-tes" customClass="CouponHistoryViewController" customModule="PointExchange" customModuleProvider="target" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bUh-LV-xgC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="CouponHistoryViewController" title="历史订单-优惠券" id="sab-0W-tes" customClass="CouponHistoryViewController" customModule="PointExchange" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Soy-JR-EXa">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="567"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="xHD-UX-hgO">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="29"/>
+                                <rect key="frame" x="0.0" y="45" width="375" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
                                     <segment title="未使用"/>
@@ -1034,21 +1003,21 @@
                                 </connections>
                             </segmentedControl>
                             <containerView hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bVn-rc-bcL">
-                                <rect key="frame" x="0.0" y="36" width="375" height="531"/>
+                                <rect key="frame" x="0.0" y="136" width="375" height="531"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <segue destination="S0T-R1-w9X" kind="embed" identifier="usedView" id="sqY-WO-kpk"/>
                                 </connections>
                             </containerView>
                             <containerView hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9JA-QN-VjT">
-                                <rect key="frame" x="0.0" y="36" width="375" height="531"/>
+                                <rect key="frame" x="0.0" y="136" width="375" height="531"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <segue destination="Lw7-ak-9Di" kind="embed" identifier="expireView" id="zoA-xY-sxO"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nmp-cC-WBc">
-                                <rect key="frame" x="0.0" y="36" width="375" height="531"/>
+                                <rect key="frame" x="0.0" y="136" width="375" height="531"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <segue destination="j14-DT-tT6" kind="embed" identifier="unuseView" id="BD7-wm-2c9"/>
@@ -1065,13 +1034,13 @@
                         <outlet property="usedContainer" destination="bVn-rc-bcL" id="g8M-6Q-r87"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bUh-LV-xgC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4452" y="-2919.490254872564"/>
         </scene>
         <!--未使用列表-->
         <scene sceneID="aHK-TX-NGy">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FvZ-9X-fqb" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController title="未使用列表" id="j14-DT-tT6" customClass="CouponHistoryContainViewContainer" customModule="PointExchange" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ug5-td-KmJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="531"/>
@@ -1100,7 +1069,6 @@
                         <outlet property="tableView" destination="YiZ-yL-bvg" id="tLC-KW-Ou1"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FvZ-9X-fqb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5340" y="-3813"/>
         </scene>
@@ -1604,6 +1572,7 @@
         <!--已使用列表-->
         <scene sceneID="IHP-7R-IsK">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Hs-oy-CUq" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController title="已使用列表" id="S0T-R1-w9X" customClass="CouponHistoryContainViewContainer" customModule="PointExchange" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="plK-2u-7WL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="531"/>
@@ -1632,13 +1601,13 @@
                         <outlet property="tableView" destination="YoR-aQ-I6D" id="6cF-Pf-V5h"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4Hs-oy-CUq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5340" y="-2546"/>
         </scene>
         <!--已过期列表-->
         <scene sceneID="fJw-Cy-Lq4">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Et2-kX-pCa" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController title="已过期列表" id="Lw7-ak-9Di" customClass="CouponHistoryContainViewContainer" customModule="PointExchange" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="guY-2l-ISC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="531"/>
@@ -1667,7 +1636,6 @@
                         <outlet property="tableView" destination="2OZ-AL-Xe6" id="zgh-Zn-mBM"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Et2-kX-pCa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5340" y="-3151"/>
         </scene>
